src/components/Main/main-style.css
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

html,body{
  height:100%;
  min-height:100%;
  line-height: 1;
}

body {
  display: flex;
  flex-direction: column;
  height: 100vh;
  font-family: 'Open Sans', sans-serif;
  line-height: 1;
}

.main-wrapper {
  display: grid;
  grid-template-rows: fit-content(10%) auto;
  flex-grow: 1;
  height: 95vh;
}

.panels-wrapper {
  display: grid;
  grid-template-columns: 50% 50%;
  height: 100%;
}

.c-input {
  border-right: 1px solid #616772;
  background: #282a36;
  color: #FFF;
  display: grid;
  grid-template-rows: 100%;
}

.c-output {
  padding: 0;
  background: #282a36;
  color: #FFF;
  display: grid;
  grid-template-rows: 50% 50%;
}

.toolbar {
  color: #fff;
  background-color: #616772;
  box-sizing: border-box;
  padding: 10px;
}

